# digital-course

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
services/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_classes_and_student_class.py  003_roster_entry_class_id.py  004_admin_username.py  005_ai_modules.py  006_prestudy.py  007_post_exercises.py  008_prestudy_teaching_advice.py
services/api/app/: __init__.py  config.py  deps.py  main.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/routers/: admin.py  chapter_admin.py  chat.py  llm_admin.py  post_exercise_admin.py  post_exercise_student.py  prestudy_admin.py  prestudy_student.py  student.py  teacher_ui.py
services/api/app/services/: __init__.py  cell_eval.py  chapter_gen.py  chapter_json.py  chat_limiter.py  crypto.py  (+7 more)
services/api/seeds/: chapters.json
services/api/tests/: conftest.py  test_bootstrap_and_login.py  test_chapter_completions_admin.py  test_fix_local_learning_records.py  test_initialize_content_db.py  test_llm_config.py  test_openai_compat_base_url.py  test_post_exercise.py  test_prestudy.py  test_roster_file_chinese_headers.py  test_roster_import_replace_and_delete.py  test_task10_teacher_ui.py  test_task4_register.py  test_task5_student_jwt.py  test_task6_chapters.py  test_task7_chapter_gen.py  test_task8_student_chapters.py  test_task9_chat.py  test_teacher_bulk_unregister.py  test_teacher_roster_class_filter.py
(+71 files in other folders)
