[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "teaching-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.0",
  "aiosqlite>=0.20",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7",
  "bcrypt>=4.0.1,<4.1.0",
  "cryptography>=42.0",
  "pyjwt[crypto]>=2.8",
  "httpx>=0.27",
  "jinja2>=3.1",
  "greenlet>=3.0",
  "openpyxl>=3.1",
]
[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21"]
postgres = ["psycopg[binary]>=3.1"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
